Fix contrast error for navbar elements

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -142,6 +142,9 @@ button {
   align-items: center;
   justify-content: center;
   width: 100%;
+  font-weight: 700;
+  /* color: var(--clr-primary--100); */
+  color: #f4edff;
 }
 
 .profile__avatar--navbar {
@@ -547,6 +550,10 @@ main {
   left: -1.5rem;
 }
 
+.product__main .product__card--price {
+  font-size: 1.4rem;
+}
+
 .product__card--content,
 .wishlist__item--content {
   position: relative;
@@ -820,7 +827,7 @@ main {
 
 .product__options--title,
 .request__stock--email p {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 900;
   color: var(--clr-text--900);
   text-transform: capitalize;
@@ -831,23 +838,6 @@ main {
   font-weight: 900;
   --bs-btn-font-size: var(--fs) !important;
   box-shadow: var(--box-shadow-buttons) !important;
-}
-
-.btn-primary {
-  /* --bs-btn-color: #fff;
-  --bs-btn-bg: #0d6efd;
-  --bs-btn-border-color: #0d6efd;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #0b5ed7;
-  --bs-btn-hover-border-color: #0a58ca;
-  --bs-btn-focus-shadow-rgb: 49,132,253;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #0a58ca;
-  --bs-btn-active-border-color: #0a53be;
-  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #0d6efd;
-  --bs-btn-disabled-border-color: #0d6efd; */
 }
 
 button:active {
